feat: Implement industry-standard API testing enhancements
- Added multi-level validation (status, JSON, structure, business logic)
- Implemented before/after state validation for PATCH operations
- Added response time tracking and validation (<2000ms industry standard)
- Implemented required fields and field type validation
- Added 4-step persistence verification for POST operations
- Enhanced Get User, Create Group, Partial Update User/Group tests
- Added 3 new validator utility functions (validateResponseTime, validateRequiredFields, validateFieldTypes)
- Environment-aware user ID selection for OEM vs Non-OEM
- Graceful error handling for prerequisite failures
- Created comprehensive testing documentation (TESTING_ENHANCEMENTS.md)
- Added database configuration utilities for OEM environment support
- Added helper scripts for user lookup and database column inspection

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:api": "playwright test scim-api.spec.ts",
     "test:auth": "playwright test --project=auth-tests",
     "test:dev": "ENV_FILE=.env.development playwright test scim-api.spec.ts",
-    "test:staging": "ENV_FILE=.env.staging playwright test scim-api.spec.ts", 
+    "test:staging": "ENV_FILE=.env.staging playwright test scim-api.spec.ts",
     "test:prod": "ENV_FILE=.env.production playwright test scim-api.spec.ts",
     "test:headed": "playwright test scim-api.spec.ts --headed",
     "test:debug": "playwright test scim-api.spec.ts --debug",
@@ -21,7 +21,9 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.56.1",
-    "@types/node": "^24.10.1"
+    "@types/mssql": "^9.1.8",
+    "@types/node": "^24.10.1",
+    "mssql": "^12.1.0"
   },
   "dependencies": {
     "@playwright/mcp": "^0.0.45",
