Replace emoji characters with ASCII text prefixes for Windows PowerShell compatibility

--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ API_BASE_URL=https://rdv-009275.hylandqa.net
 
 # API Endpoint Type Configuration
 # Options: 'scim' or 'apiserver'
-API_ENDPOINT_TYPE=scim
+API_ENDPOINT_TYPE=apiserver
 
 # Endpoint Paths for Different Types
 API_SCIM_ENDPOINT=/obscim/v2
